# URA-project

./: .gitignore  Dockerfile  LICENSE  README.md  autoend_srat.py  config.py  docker-compose.yml  integrated.env  main.py  nginx.conf  redis.conf  requirements.txt  setup_logger.py
autoend_service/: Dockerfile  main.py
bot_service/: Dockerfile  main.py
brocker/: __init__.py  base.py  export_info.py  message_sender.py
db/: ApiAuth.py  Notify.py  ToiletSessions.py  User.py  UserUnion.py  __init__.py  base.py  fields.py
export_info_service/: Dockerfile  main.py
filters/: command_args.py  user.py
frontend_service/: .gitignore  Cargo.toml  Dockerfile  justfile
frontend_service/.sqlx/: query-2b2d662b9231e94808963925c2a833bd4cce8dc022530fd431101d3c46eb3495.json  query-72d9ad6396d3e5018b486adc6d72f55a51d5c6b8ae4a75ad4cd63a9f117911d5.json  query-77e0affdcee96a93c7d8a8f27066718ad7b15e4b1fd83aeba7e8111f686d0892.json  query-b71fb7c351e79409048d0f56acddce1d5b525af4920017f49582050154dcc904.json  query-cfd1b3376cf38d6c95de5b322b06e4ea46761616d08359fd7a0338c6772338d0.json  query-d58bea9c2e057f5bb802d8fa42f376d74788326776a860cfaf67a9f41c236f66.json
frontend_service/public/: styles.css
frontend_service/src/: main.rs
frontend_service/templates/: anal.html  error.html  index.html
handlers/: __init__.py  cancel.py  credits.py  group_perdish.py  info.py  link.py  notify.py  report.py  setnickname.py  settings.py  srat.py  start.py  user_control.py
keyboards/: api_keyboard.py  channels_keyboard.py  groups_keyboard.py  guide_keyboard.py  notify_keyboard.py  sret_keyboard.py  (+3 more)
(+101 files in other folders)
